logs/user_bot_output.log
  File "/Users/divyanshchugh/Desktop/chat bot/user_bot.py", line 5047
    f"Please enter the code you received by either:\n""\n
                                                      ^
SyntaxError: unterminated string literal (detected at line 5047)
